--- a/src/pages/Profile/ManageNft/MintNFT/MintNFTBox.module.scss
+++ b/src/pages/Profile/ManageNft/MintNFT/MintNFTBox.module.scss
@@ -2,8 +2,8 @@ $break-point-1: 814px;
 $tablet: 768px;
 $mobile: 576px;
 .mintNFT-box {
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid #ccb9ff;
+    background: #ebe3ff;
+    border: 1px solid rgba(202, 186, 245, 0.3);
     box-sizing: border-box;
     backdrop-filter: blur(50px);
     border-radius: 4px;
@@ -22,17 +22,16 @@ $mobile: 576px;
             cursor: pointer;
             padding: 5px;
             border-radius: 50%;
-            background: rgba(254, 253, 255, 0.25);
+            color: #7000ff;
             transition-duration: 0.35s;
-            color: #e7dfff;
             font-size: 32px;
 
             &:hover {
-                background: rgba(254, 253, 255, 0.25);
+                color: #4f00b6;
             }
 
             &:active {
-                background: rgba(254, 253, 255, 0.35);
+                color: #7d1cfc;
             }
         }
 
@@ -40,7 +39,7 @@ $mobile: 576px;
             cursor: pointer;
             transition-duration: 0.35s;
             font-size: 28px;
-            color: #e7dfff;
+            color: #14142b;
         }
 
         .input {
@@ -68,20 +67,20 @@ $mobile: 576px;
             align-items: flex-start !important;
             margin-bottom: 30px;
 
-			.table-attribute {
-				display: flex;
-				align-items: flex-start;
-				justify-content: space-between;
+            .table-attribute {
+                display: flex;
+                align-items: flex-start;
+                justify-content: space-between;
 
-				.table {
-					width: 95%;
-				}
+                .table {
+                    width: 95%;
+                }
 
-				.add-icon {
-					padding-top: 14px;
-					cursor: pointer;
-				}
-			}
+                .add-icon {
+                    padding-top: 14px;
+                    cursor: pointer;
+                }
+            }
         }
     }
 
@@ -137,7 +136,7 @@ $mobile: 576px;
 }
 
 .input {
-    color: #ffffff;
+    color: #402a7d;
     background: none;
     border: none;
     margin: 0 auto;
@@ -145,7 +144,7 @@ $mobile: 576px;
     &:focus {
         outline: none !important;
         border: none;
-        border-bottom: 1px solid #ffffff;
+        border-bottom: 1px solid #402a7d;
     }
 }
 
@@ -160,7 +159,7 @@ $mobile: 576px;
         font-weight: 600;
         font-size: 14px;
         line-height: 150%;
-        color: #e7dfff;
+        color: #402a7d;
     }
 
     .image-upload {
