--- a/src/components/NFTItem/NFTItem.module.scss
+++ b/src/components/NFTItem/NFTItem.module.scss
@@ -2,105 +2,132 @@ $break-point-1: 1180px;
 $break-point-2: 912px;
 
 .nft-item {
-    // width: 250px;
-    width: 250px;
-    min-height: 320px;
-    background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
-    border: 1px solid #ad99e7;
-    box-sizing: border-box;
-    border-radius: 6px;
-    height: fit-content;
-    cursor: pointer;
-    margin-right: 32px;
-    margin-bottom: 32px;
+    width: 20%;
+    margin-bottom: 20px;
+    padding: 0 10px;
+    display: flex;
+    justify-content: center;
+    position: relative;
 
-    .top {
-        border-bottom: 1px solid #ad99e7;
-        box-sizing: border-box;
-        border-radius: 8px;
-        width: 100%;
-        height: 270px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: 100% 100%;
-
-        @media (max-width: $break-point-1) {
-            background-size: 150px 190px;
-        }
-
-        .tag {
-            background: rgba(232, 217, 255, 0.5);
-            color: #402a7d;
-            border-radius: 4px;
-            font-weight: 600;
-            font-size: 12px;
-            padding: 4px 10px;
-            width: fit-content;
-            margin: 8px;
-            float: right;
-        }
-
-        .nft-image {
-            //   width: 200px;
-            height: 100%;
-
-            img {
-                width: 100%;
-                height: 100%;
-                border-radius: 8px;
-            }
-        }
+    @media (max-width: 1626px) {
+        width: 25%;
+    }
+    @media (max-width: 1378px) {
+        width: 33.33%;
     }
 
-    .bottom {
-        padding: 20px;
+    @media (max-width: 1120px) {
+        width: 50%;
+    }
+    @media (max-width: 860px) {
+        width: 100%;
+    }
+    @media (max-width: 768px) {
+        width: 50%;
+    }
+    @media (max-width: 600px) {
+        width: 100%;
+    }
 
-        .name {
-            display: flex;
-            align-items: center;
+    .container {
+        width: 240px;
+        min-height: 320px;
+        background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%);
+        border: 1px solid #ad99e7;
+        box-sizing: border-box;
+        border-radius: 6px;
+        height: fit-content;
+        cursor: pointer;
+        margin: 0px 18px 30px 18px;
 
-            &-avatar {
-                width: 28px;
-                height: 28px;
-                border-radius: 50%;
-                background-color: #ffffff;
-                //   border: 1px solid #6dd0e7;
+        .top {
+            border-bottom: 1px solid #ad99e7;
+            box-sizing: border-box;
+            border-radius: 8px 8px 0px 0px;
+            width: 100%;
+            height: 270px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 100% 100%;
+
+            @media (max-width: $break-point-1) {
+                background-size: 150px 190px;
             }
 
-            &-text {
+            .tag {
+                background: rgba(232, 217, 255, 0.5);
+                color: #402a7d;
+                border-radius: 4px;
+                font-weight: 600;
+                font-size: 12px;
+                padding: 4px 10px;
+                width: fit-content;
+                margin: 8px;
+                float: right;
+            }
+
+            .nft-image {
+                //   width: 200px;
+                height: 100%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 8px 8px 0px 0px;
+                }
+            }
+        }
+
+        .bottom {
+            padding: 20px;
+
+            .name {
+                display: flex;
+                align-items: center;
+
+                &-avatar {
+                    width: 28px;
+                    height: 28px;
+                    border-radius: 50%;
+                    background-color: #ffffff;
+                    //   border: 1px solid #6dd0e7;
+                }
+
+                &-text {
+                    font-weight: 500;
+                    font-size: 16px;
+                    line-height: 21px;
+                    color: #ffffff;
+                    margin-left: 12px;
+                }
+            }
+
+            .title {
+                font-weight: 600;
+                font-size: 18px;
+                line-height: 23px;
+                color: #ffffff;
+                margin-bottom: 10px;
+            }
+
+            .nftId {
                 font-weight: 500;
                 font-size: 16px;
-                line-height: 21px;
-                color: #ffffff;
-                margin-left: 12px;
+                line-height: 20px;
+                color: #dac6ff;
+                margin-bottom: 10px;
             }
-        }
 
-        .title {
-            font-weight: 600;
-            font-size: 18px;
-            line-height: 23px;
-            color: #ffffff;
-            margin-bottom: 10px;
-        }
+            .number-box {
+                background: #3d1c6c;
+                border-radius: 4px;
+                padding: 8px 12px;
 
-        .nftId {
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 20px;
-            color: #dac6ff;
-            margin-bottom: 10px;
-        }
-
-        .number-box {
-            background: #3d1c6c;
-            border-radius: 4px;
-            padding: 8px 12px;
-
-            .number {
-                font-size: 16px;
-                font-weight: 600;
-                color: #be74ff;
+                .number {
+                    font-size: 16px;
+                    font-weight: 600;
+                    color: #be74ff;
+                }
             }
         }
     }
