--- a/src/pages/Profile/CreateGame/CreateGame.module.scss
+++ b/src/pages/Profile/CreateGame/CreateGame.module.scss
@@ -14,6 +14,7 @@ $mobile: 576px;
         width: 70%;
         margin: 0 auto;
         padding-top: 5%;
+        
     }
 
     .skeleton {
@@ -25,6 +26,7 @@ $mobile: 576px;
     .grid-parent {
         display: flex;
         align-items: stretch;
+        
     }
 
     .card {
@@ -225,4 +227,8 @@ $mobile: 576px;
         font-size: 24px;
         font-weight: 600;
     }
+}
+.pagination {
+    text-align: center;
+    margin-top: 30px;
 }
