--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -39,7 +39,7 @@ $break-point-3: 767px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        font-family: "Mali-Regular", sans-serif;
+		font-family: 'Montserrat', sans-serif;
 
         @media (max-width: $break-point-3) {
           margin: 20px 0px;
