--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
 html,
 body,
 #root {
-    font-family: "Mali-Regular", sans-serif;
+    font-family: "Montserrat", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     /* overflow-x: hidden; */
