--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -32,6 +32,7 @@ $break-point-3: 767px;
     justify-content: space-between;
     font-family: "Mali-Regular", sans-serif;
     margin-left: auto;
+    font-size: 16px !important;
     @media (max-width: $break-point-3) {
       margin: 20px 0px;
     }
@@ -70,7 +71,7 @@ $break-point-3: 767px;
         align-items: center;
         justify-content: space-between;
 		font-family: 'Montserrat', sans-serif;
-
+        font-size: 16px !important;
         @media (max-width: $break-point-3) {
           margin: 20px 0px;
         }
@@ -149,7 +150,7 @@ $break-point-3: 767px;
     width: fit-content;
     padding: 8px 20px !important;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 16px !important;
     line-height: 150%;
     
     border-radius: 0px;
