--- a/src/components/ListModal/ListModal.module.scss
+++ b/src/components/ListModal/ListModal.module.scss
@@ -1,3 +1,8 @@
+$break-point-1: 814px;
+$mobile: 576px;
+// $break-point-1: 1180px;
+$break-point-2: 912px;
+$break-point-3: 767px;
 .modal-style {
     background: #ebe3ff;
     border-radius: 8px;
@@ -10,7 +15,23 @@
         text-align: right;
         cursor: pointer;
     }
-
+    .search {
+        width: 340px;
+        margin-bottom: 20px;
+        border-bottom: 2px solid black;
+        color: #402a7d !important;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-family: "Mali-Regular", sans-serif;
+        margin-left: auto;
+        margin-right: auto;
+        font-weight: 500;
+        font-size: 16px !important;
+        @media (max-width: $break-point-3) {
+          margin: 20px 0px;
+        }
+    }
     .title {
         text-align: center;
         .big-title {
@@ -96,6 +117,15 @@
 
     .pagination {
         text-align: center;
-        margin-top: 30px;
+        margin-top: 0px;
+        :global{
+            .ant-pagination-item-active{
+                transform: scale(1.1);
+                background: linear-gradient(180deg, #6f08fe 0%, #513e7d 100%) !important;
+                a{
+                    // color: red !important;
+                }
+            }
+        }
     }
 }
