--- a/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
+++ b/src/pages/Profile/Store/NFTDetail/NFTDetail.module.scss
@@ -2,7 +2,27 @@
     max-width: 1180px;
 	margin: 0 auto;
 	padding-top: 60px;
-
+    .breadcrums{
+        :global{
+            .MuiTypography-root{
+                color: #BC88FF !important;
+                font-size: 16px;
+                text-transform: capitalize;
+                
+            }
+            .MuiBreadcrumbs-li{
+                cursor: pointer;
+            }
+            .MuiSvgIcon-fontSizeMedium{
+                color: #625D83 !important;
+                // background-color: #625D83 !important;
+            }
+        }
+        padding-bottom: 18px;
+        margin-bottom: 40px;
+        border-bottom: 1px solid rgba(64, 42, 125, 0.5);
+        
+    }
     .left {
         display: flex;
         align-items: flex-start;
