--- a/src/components/FilterStore/FilterStore.module.scss
+++ b/src/components/FilterStore/FilterStore.module.scss
@@ -1,6 +1,6 @@
 .filter {
-  background: #162f54;
-  border-radius: 12px;
+  background: #402A7D;
+  // border-radius: 12px;
   padding: 60px 20px;
   height: 100%;
 
