--- a/src/pages/Profile/Store/ViewItemNFT/index.module.scss
+++ b/src/pages/Profile/Store/ViewItemNFT/index.module.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mali:wght@300;500;600;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,600&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Mali:wght@300;500;600;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,600&display=swap');
 $break-point-1: 814px;
 $mobile: 576px;
 // $break-point-1: 1180px;
