--- a/src/pages/Store/index.module.scss
+++ b/src/pages/Store/index.module.scss
@@ -1,156 +1,275 @@
-$break-point-1: 1180px;
+$break-point-1: 814px;
+$mobile: 576px;
+// @import url('https://fonts.googleapis.com/css2?family=Mali:wght@300;500;600;700&family=Montserrat:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,500;1,600&display=swap');
+// $break-point-1: 1180px;
 $break-point-2: 912px;
 $break-point-3: 767px;
+.profile {
+  padding-bottom: 60px;
 
-.store {
-  display: flex;
-  width: 100%;
-  color: #ffffff;
+  .row {
+    display: flex;
+    align-items: flex-start !important;
 
-  .left {
-    width: 28%;
-    margin-bottom: 30px;
+    .left {
+      @media (max-width: $break-point-1) {
+        display: none;
+      }
+    }
 
-    @media (max-width: $break-point-2) {
-      display: none;
-      width: 0%;
+    .right-wrapper {
+      margin-left: 40px;
+      @media (max-width: $break-point-1) {
+        max-width: 100%;
+        flex: 1 !important;
+      }
+      .filter-mobile {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
+        background: #fff;
+        border-radius: 4px;
+        width: fit-content;
+
+        @media (min-width: $break-point-1) {
+          display: none;
+        }
+        &-btn {
+          // background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
+          font-family: "Mali";
+          font-size: 16px;
+          line-height: 150%;
+          padding: 6px 16px;
+          background: linear-gradient(180deg, #89e6ff 0%, #3b7ce3 100%);
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          @media (max-width: $mobile) {
+            font-size: 14px;
+            padding: 6px 12px;
+          }
+          &--active {
+            background: linear-gradient(180deg, #4ad7e0 0%, #4aabe1 100%);
+            color: #ffffff !important;
+            -webkit-background-clip: unset;
+            -webkit-text-fill-color: unset;
+          }
+        }
+      }
     }
   }
+}
 
-  .right {
-    width: 72%;
-    margin-left: 30px;
-    margin-bottom: 30px;
-
-    @media (max-width: $break-point-2) {
-      width: 100%;
-      margin: 0 auto;
-      margin-bottom: 30px;
+.right-top {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    @media (max-width: $break-point-3) {
+      flex-direction: column;
+      align-items: flex-start;
     }
 
-    &-top {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
+    &-title {
+      font-weight: bold;
+      font-size: 20px;
+      line-height: 26px;
+      color: #ffffff;
+    }
 
+    
+  .search {
+    width: 380px;
+    border-bottom: 2px solid #ffffff;
+    color: #ffffff !important;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: "Mali-Regular", sans-serif;
+    margin-left: auto;
+    font-size: 16px !important;
+    @media (max-width: $break-point-3) {
+      margin: 20px 0px;
+    }
+
+    .icon {
+      cursor: pointer;
+      color: #ffffff;
+    }
+  }
+  
+  .group-button-filter {
+    display: flex;
+    align-items: center;
+    // margin-left: auto;
+    
+    .drop-down {
+      background: #56428F;
+      border-radius: 6px;
+      padding: 10.5px 12px;
+      width: 144px;
+      margin-left: 36px;
+      font-size: 14px;
+      :global{
+        .anticon-down{
+          font-weight: bold;
+          font-size: 14px;
+        }
+      }
       @media (max-width: $break-point-3) {
-        flex-direction: column;
-        align-items: flex-start;
+        margin-left: 0px;
+      }
+      
+      &-label {
+        cursor: default;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+		font-family: 'Montserrat', sans-serif;
+        font-size: 16px !important;
+        @media (max-width: $break-point-3) {
+          margin: 20px 0px;
+        }
+
+        .icon {
+          cursor: pointer;
+          color: #ffffff;
+        }
       }
 
-      &-title {
-        font-weight: bold;
-        font-size: 20px;
-        line-height: 26px;
-        color: #ffffff;
-      }
-
-      .group-search {
+      .group-button-filter {
         display: flex;
         align-items: center;
 
-        @media (max-width: $break-point-3) {
-          flex-direction: column;
-          align-items: flex-start;
-          width: 100%;
-        }
-
-        .search {
-          width: 100%;
-          border-bottom: 2px solid #ffffff;
-          color: #ffffff !important;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-          font-family: "Montserrat", sans-serif;
+        .drop-down {
+          background: #56428F;
+          border-radius: 6px;
+          padding: 12px;
+          width: 172px;
+          margin-left: 36px;
+          font-size: 14px;
 
           @media (max-width: $break-point-3) {
-            margin: 20px 0px;
+            margin-left: 0px;
           }
 
-          .icon {
-            cursor: pointer;
-            color: #ffffff;
+          &-label {
+            cursor: default;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
           }
         }
 
-        .group-button {
-          display: flex;
+        .button-filter {
+          display: none;
           align-items: center;
+          margin-left: 12px;
+          background: #101a3f;
+          border-radius: 6px;
+          padding: 11px;
+          font-size: 14px;
 
-          .drop-down {
-            background: #101a3f;
-            border-radius: 6px;
-            padding: 12px;
-            width: 172px;
-            margin-left: 36px;
-            font-size: 14px;
-
-            @media (max-width: $break-point-3) {
-              margin-left: 0px;
-            }
-
-            &-label {
-              display: flex;
-              align-items: center;
-              justify-content: space-between;
-            }
+          &:active {
+            background-color: rgb(17, 31, 87);
           }
 
-          .button-filter {
-            display: none;
-            align-items: center;
-            margin-left: 12px;
-            background: #101a3f;
-            border-radius: 6px;
-            padding: 11px;
-            font-size: 14px;
-
-            &:active {
-              background-color: rgb(17, 31, 87);
-            }
-
-            @media (max-width: $break-point-2) {
-              display: flex;
-            }
+          @media (max-width: $break-point-2) {
+            display: flex;
           }
         }
       }
     }
 
-    &-filter {
-      margin-top: 36px;
-      .filter-box {
-        display: inline-block;
-        padding: 2px 8px 2px 8px;
-        margin-right: 5px;
-        border-radius: 20px;
-        font-size: 14px;
-        font-weight: 600;
-        background: #1f1e1e6e;
-        &-image {
-          padding-bottom: 2px;
-          cursor: pointer;
-        }
+    .button-filter {
+      display: none;
+      align-items: center;
+      margin-left: 12px;
+      background: #101a3f;
+      border-radius: 6px;
+      padding: 11px;
+      font-size: 14px;
+
+      &:active {
+        background-color: rgb(17, 31, 87);
       }
-      .filter-clear {
-        display: inline-block;
-        background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
-        background-clip: text;
-        color: transparent;
-        font-weight: 700;
-        font-size: 14px;
+
+      @media (max-width: $break-point-2) {
+        display: flex;
+      }
+    }
+    
+  }
+}
+  .button-sell {
+    width: fit-content;
+    padding: 8px 20px !important;
+    font-weight: bold;
+    font-size: 16px !important;
+    line-height: 150%;
+    
+    border-radius: 0px;
+    color: white !important;
+    background: linear-gradient(94.08deg, #7F00FF -1.88%, #E100FF 100%) !important;
+    border-radius: 6px;
+    @media (max-width: $mobile) {
+      font-size: 14px;
+      padding: 6px 12px;
+    }
+    
+  }
+  .button-filter {
+    margin-top: 36px;
+    .filter-box {
+      display: inline-block;
+      padding: 2px 8px 2px 8px;
+      margin-right: 5px;
+      border-radius: 20px;
+      font-size: 14px;
+      font-weight: 600;
+      background: #1f1e1e6e;
+      &-image {
+        padding-bottom: 2px;
         cursor: pointer;
       }
     }
-
-    &-main {
-      margin-top: 36px;
+    .filter-clear {
+      display: inline-block;
+      background: linear-gradient(180deg, #00c6fb 0%, #005bea 100%);
+      background-clip: text;
+      color: transparent;
+      font-weight: 700;
+      font-size: 14px;
+      cursor: pointer;
     }
+    
+  }
+  .list{
+      margin-top: 46px;
+      padding-top: 40px;
+  }
+  .pagination {
+    text-align: center;
+    margin-top: 30px;
+}
+.menu-dropdown{
+  background-color: #56428F !important;
+  padding: 0px;
+  li{
+    color: #fff !important;
+    // font-weight: 600;
+  }
+  li:hover{
+    background-color: #56428F !important;
 
-    .pagination {
-      text-align: center;
-      margin-top: 30px;
+  }
+  &--active{
+    background: linear-gradient(94.08deg, #7F00FF -1.88%, #E100FF 100%);
+  }
+  :global{
+    .ant-dropdown{
+      background-color: #56428F !important;
     }
   }
 }
